# preleagal

./: .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  catalog.json  code-review-gemini.md  code_review_gemini.md  docker-compose.yml  package-lock.json
backend/: auth.py  database.py  main.py  pyproject.toml
docs/: DEPLOY_NEW_APP.md  EC2_SETUP_FROM_SCRATCH.md
frontend/: GEMINI.md  MANUAL_TESTS.md  jest.config.js  next.config.mjs  package-lock.json  package.json
frontend/src/__mocks__/: react-pdf-renderer.tsx
frontend/src/__tests__/components/: NDAApp.test.tsx  NDAChat.test.tsx  NDADocument.test.tsx  NDAForm.test.tsx
frontend/src/__tests__/hooks/: useDebounced.test.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthScreen.tsx  DocumentApp.tsx  DocumentChat.tsx  GenericDocPdf.tsx  GenericDocPreview.tsx  MyDocumentsModal.tsx  NDAApp.tsx  NDAChat.tsx  NDADocument.tsx  NDAForm.tsx  NDAHtmlPreview.tsx  NDAPreview.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useDebounced.ts
frontend/src/lib/: ndaHelpers.ts
frontend/src/types/: document.ts  nda.ts
scripts/: start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: LICENSE.txt
