[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "pydantic[email]>=2.13.3",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.46.0",
]
